gameofpods/irongallery/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: iron-gallery-firewall
spec:
  podSelector:
    matchLabels:
      db: mariadb
  policyTypes:
  - Ingress
  # - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: iron-gallery
    ports:
    - protocol: TCP
      port: 3306
  # egress:
  # - to:
  #   - podSelector:
  #       matchLabels:
  #         db: mariadb
  #   ports:
  #   - protocol: TCP
  #     port: 3306
